<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
    android:checkableBehavior="single"
    >
        <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_home"
        />
        <item
                android:id="@+id/productos"
                android:title="@string/productos"
                android:icon="@drawable/ic_productos2"
        />
        <item
                android:id="@+id/nosotros"
                android:title="@string/nosotros"
                android:icon="@drawable/ic_nosotros"
        />
        <item
                android:id="@+id/ubicacion"
                android:title="@string/ubicacion"
                android:icon="@drawable/ic_ubicacion"
        />
    </group>
    <item
            android:title="@string/otros"
    >
        <menu>
        <item
                android:id="@+id/perfil"
                android:title="@string/perfil"
                android:icon="@drawable/ic_usuario"
        />
        </menu>
    </item>
</menu>